# zodify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  site-deploy.yml
benchmarks/: README.md  bench_env.py  bench_import.py  bench_validate.py  compare.py  comparison_bench.py
benchmarks/baselines/: ci-baseline.json
examples/: basic_validation.py  custom_validators.py  env_config.py  nested_schemas.py  structured_errors.py  union_types.py
notes/architecture/: schema-class-feasibility-report.md
scripts/: baseline_final.txt  check_package_artifacts.py  error_baseline.py  extract_changelog_section.sh  release_preflight.sh
site/: index.html  metadata.json  package-lock.json  package.json
site/public/: CNAME  llms.txt  robots.txt  sitemap.xml
site/scripts/: generate-route-html.mjs
site/src/: App.tsx  index.css  siteMeta.ts
site/src/components/: Footer.tsx  Layout.tsx  Navbar.tsx
site/src/pages/: AboutPage.tsx  BenchmarksPage.tsx  DocsPage.tsx  HomePage.tsx
tests/: __init__.py  test_benchmark_tooling.py  test_custom_validators.py  test_depth_limit.py  test_env.py  test_error_baseline.py  test_examples.py  test_logic_loc_budget.py  test_package_artifacts.py  test_schema_class.py  test_schema_class_runtime_spike.py  test_schema_reference_module.py  test_structured_errors.py  test_typing_contracts.py  test_union_types.py  test_unknown_keys.py  test_validator_class.py  test_zodify.py
tests/typing/: __init__.py  schema_class_runtime_prototype.py  schema_reference_module.py  test_schema_class_typing_contract.py
zodify/: __init__.py  schema.py
