[build-system]
requires = ["setuptools>=69.0,<81.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zodify"
version = "0.5.0"
description = "Zod-inspired dict validation for Python. Zero deps. One file."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jun Young Sohn", email = "junyoung.eddie@gmail.com"},
]
keywords = ["validation", "schema", "dict", "zod", "type-checking", "env", "config"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "mypy",
    "pyright",
    "pytest",
    "pytest-cov",
    "setuptools>=69.0,<81.0",
]

[project.urls]
Homepage = "https://zodify.dev"
Documentation = "https://zodify.dev"
Repository = "https://github.com/junyoung2015/zodify"
Changelog = "https://github.com/junyoung2015/zodify/blob/main/CHANGELOG.md"
Issues = "https://github.com/junyoung2015/zodify/issues"
Funding = "https://github.com/sponsors/junyoung2015"

[tool.setuptools.package-data]
zodify = ["py.typed"]

[tool.setuptools.packages.find]
include = ["zodify*"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["zodify"]

[tool.pyright]
include = ["zodify"]
pythonVersion = "3.10"
